<resources>
    <string name="app_name">A6</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="order_string">Order fresh brewed coffee</string>
    <string name="Order">ORDER</string>
    <string name="Clear">CLEAR</string>
    <string name="Save">SAVE FAVORITE</string>
    <string name="Load">LOAD FAVORITE</string>
    <string name="Instructions">Special Instructions</string>
    <string name="Milk">Milk</string>
    <string name="Sugar">Sugar</string>
    <string name="Brew">Brew</string>
    <string name="Large">Large</string>
    <string name="Medium">Medium</string>
    <string name="Small">Small</string>
    <string name="Size">Size</string>
    <string name="title_activity_view_order">ViewOrderActivity</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="order_correct">Is this order correct?</string>
    <string name="extra_sugar">Extra Sugar</string>
    <string name="with_sugar">With Sugar</string>
    <string name="with_milk">With milk.</string>
    <string name="small">(small)</string>
    <string name="turrkish">Turkish</string>
</resources>
